[tool.poetry]
name = "bracketcounterrevamped"
version = "0.1.0"
description = ""
authors = ["Martin K <martyshkon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
nextcord = "^2.4.2"
dateparser = "^1.1.8"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
pillow = "^9.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
